feat(better naming <3)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <nav id="nav" role="navigation" aria-label="Navigation principale" data-level="1">
-                <ul class="navbar-mega no-ul">
+                <ul class="naav no-ul">
                     
                     <li>
                         <a data-toggle="collapse" href="#menu-1">
@@ -73,7 +73,7 @@
     <span aria-hidden="true">↓</span>
 </a>
 
-                        <ul class="fresh-menu no-ul" id="menu-1" data-menu="1" data-level="1">
+                        <ul class="suub-naav no-ul" id="menu-1" data-menu="1" data-level="1">
     <li><a href="#item-1A1">À propos</a></li>
     <li><a href="#item-2A1">Sur Github</a></li>
     <li><a href="#item-3A1">Contact</a></li>
@@ -124,7 +124,7 @@
     <span aria-hidden="true">↓</span>
 </a>
 
-                        <ul class="fresh-menu no-ul" id="menu-2" data-menu="2" data-level="1">
+                        <ul class="suub-naav no-ul" id="menu-2" data-menu="2" data-level="1">
     <li><a href="#item-1A2">À propos</a></li>
     <li><a href="#item-2A2">Sur Github</a></li>
     <li><a href="#item-3A2">Contact</a></li>
@@ -175,7 +175,7 @@
     <span aria-hidden="true">↓</span>
 </a>
 
-                        <ul class="fresh-menu no-ul" id="menu-3" data-menu="3" data-level="1">
+                        <ul class="suub-naav no-ul" id="menu-3" data-menu="3" data-level="1">
     <li><a href="#item-1A3">À propos</a></li>
     <li><a href="#item-2A3">Sur Github</a></li>
     <li><a href="#item-3A3">Contact</a></li>
@@ -226,7 +226,7 @@
     <span aria-hidden="true">↓</span>
 </a>
 
-                        <ul class="fresh-menu no-ul" id="menu-4" data-menu="4" data-level="1">
+                        <ul class="suub-naav no-ul" id="menu-4" data-menu="4" data-level="1">
     <li><a href="#item-1A4">À propos</a></li>
     <li><a href="#item-2A4">Sur Github</a></li>
     <li><a href="#item-3A4">Contact</a></li>
